<resources>
    <string name="app_name">RickPick</string>

    <string name="edit_message">Skriv in alternativ...</string>
    <string name="button_send">Lägg till</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pick">Slumpa</string>
    <string name="dice">Kasta</string>
    <string name="flip">Singla</string>
    <string name="spin">Snurra</string>
    <string name="title_activity_display_message">RickPicks val är:</string>

    <string name="hello_world">Hello world!</string>
</resources>
